@startuml
hide circle


entity articulo {
  *id: int
  --
  *codigo: string
  *nombre: string
  --
  unique (codigo)
}

entity empleado {
    *id: int
    ---
    *nombre: string
}

entity solicitud {
    *id: int
    ---
    *fecha: date
}

entity detalle_solicitud {
    *id_solicitud: int
    *id_articulo: int
    ---
    *cantidad: int
}

solicitud ||--o{ detalle_solicitud
articulo ||--o{ detalle_solicitud
empleado ||--o{ solicitud

@enduml